[package]
name = "octave_rust"
version = "0.1.0"
authors = ["Zhizhou Ma <zm9913@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
rand = "0.8.3"
rspotify = "0.11.5"
serenity = {version = "0.11", default-features = false, features = ["client", "rustls_backend", "cache", "model", "collector", "gateway"] }
songbird = "0.3"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "time", "sync"] }
poise = {version = "0.4.1", features = ["cache"]}
anyhow = "1"
log = "0.4"
async-trait = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3