[package]
name = "octave_rust"
version = "0.1.0"
authors = ["Zhizhou Ma <zm9913@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
rand = "0.8.3"
rspotify = "0.14.*"
serenity = {version = "0.12.*", default-features = false, features = ["client", "rustls_backend", "cache", "model", "collector", "gateway", "voice"] }
songbird = {version="0.5.*", features = ["driver"]}
symphonia = { features = ["aac", "mp3", "isomp4", "pcm"], version = "0.5.2" }
tokio = { version = "1.44.*", features = ["macros", "rt-multi-thread", "time", "sync"] }
poise = {version = "0.6.*", features = ["cache"]}
anyhow = "1"
log = "0.4"
async-trait = "0.1"
rustls = {version = "0.23.*", features = ["ring"]}
reqwest = "0.12.*"
serde_json = "1.0"
serde = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3